Added some changes;

--- a/index.html
+++ b/index.html
@@ -145,10 +145,12 @@
         </section>
 
         <section class="cover">
-            <a class="cover__overlay" href="#" target="_blank">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+            <a href="#" target="_blank">
+                <img class="cover__overlay" src="./images/background.jpg" alt="Вагоны и рельсы">
             </a>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+
         </section>
     </main>
 
