Added some changes;

--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
                 <a class="footer__link" href="#" target="_blank">Путешествия</a>
             </li>
         </ul>
-        <p class="footer__copyright">&copy; 2021. Татьяна Селюк</p>
+        <p class="footer__copyright">&copy; 2021. Татьяна С.</p>
     </footer>
 </div>
 </body>
