--- a/index.html
+++ b/index.html
@@ -26,10 +26,10 @@
         </div>
         <ul class="header__lang-links">
             <li>
-                <a class="header__lang-link header__lang-link_active" lang="ru">Ru</a>
+                <a class="header__lang-link header__lang-link_active" href="#" lang="ru" target="_self">Ru</a>
             </li>
             <li>
-                <a class="header__lang-link" lang="en">En</a>
+                <a class="header__lang-link" lang="en" target="_self">En</a>
             </li>
         </ul>
     </header>
@@ -87,7 +87,7 @@
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="#" target="_blank">park-kosa.ru</a>
+                    <a class="place__link" href="#" target="_self">park-kosa.ru</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-4.jpg" alt="">
                 <div class="place__paragraphs">
@@ -111,7 +111,7 @@
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
+                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_self">National Geographic</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-2.jpg" alt="">
                 <div class="place__paragraphs">
@@ -123,7 +123,7 @@
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
+                    <a class="place__link" href="https://vk.com/baikalmile" target="_self">https://vk.com/baikalmile</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-1.jpg" alt="">
                 <div class="place__paragraphs">
@@ -135,7 +135,7 @@
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+                    <a class="place__link" href="http://vodlozero.ru" target="_self">http://vodlozero.ru/</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image.jpg" alt="">
                 <div class="place__paragraphs">
@@ -145,11 +145,11 @@
         </section>
 
         <section class="cover">
-            <a href="#" target="_blank">
-                <img class="cover__overlay" src="./images/background.jpg" alt="Вагоны и рельсы">
+            <a href="#" target="_self">
+                <!-- <img class="cover__overlay" src="./images/background.jpg" alt="Вагоны и рельсы"> -->
+                <h2 class="cover__title">До Байкала «на собаках»</h2>
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
             </a>
-            <h2 class="cover__title">До Байкала «на собаках»</h2>
-            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
 
         </section>
     </main>
@@ -157,19 +157,19 @@
     <footer class="footer">
         <ul class="footer__links">
             <li>
-                <a class="footer__link" href="#" target="_blank">Карты</a>
+                <a class="footer__link" href="#" target="_self">Карты</a>
             </li>
             <li>
-                <a class="footer__link" href="#" target="_blank">Погода</a>
+                <a class="footer__link" href="#" target="_self">Погода</a>
             </li>
             <li>
-                <a class="footer__link" href="#" target="_blank">Расписание</a>
+                <a class="footer__link" href="#" target="_self">Расписание</a>
             </li>
             <li>
-                <a class="footer__link" href="#" target="_blank">Календарь</a>
+                <a class="footer__link" href="#" target="_self">Календарь</a>
             </li>
             <li>
-                <a class="footer__link" href="#" target="_blank">Путешествия</a>
+                <a class="footer__link" href="#" target="_self">Путешествия</a>
             </li>
         </ul>
         <p class="footer__copyright">&copy; 2021. Татьяна С.</p>
