Added big changes;

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.jpg" alt="СОН - это аббревиатура, обозначающая Самое Офигенное Наслаждение">
-            <img class="lead__image lead__image_paths" src="./images/Group4.svg" alt="Путь">
+            <!-- <img class="lead__image lead__image_paths" src="./images/Group4.svg" alt="Путь">-->
             <p class="lead__caption">Ваша полка — верхняя</p>
         </section>
 
@@ -66,20 +66,18 @@
         </section>
 
         <section class="photo-grid">
-            <div class="photo-grid__items">
-                <img class="photo-grid__item" src="./images/photo/item-11.jpg" alt="Великолепный вид из окна поезда">
-                <img class="photo-grid__item" src="./images/photo/item-10.jpg" alt="Заснеженные горы в белых облаках">
-                <img class="photo-grid__item" src="./images/photo/item-9.jpg" alt="Стоящая на стоге сена собака пристально всматривается в даль">
-                <img class="photo-grid__item" src="./images/photo/item-8.jpg" alt="Ельник в тумане на склоне горы">
-                <img class="photo-grid__item" src="./images/photo/item-7.jpg" alt="Колесо машины на толстом слое льда замёрзшего Байкала">
-                <img class="photo-grid__item" src="./images/photo/item-6.jpg" alt="Пустынный берег моря и горная цепь виднеется вдалеке">
-                <img class="photo-grid__item" src="./images/photo/item-5.jpg" alt="Острые пики снежных гор">
-                <img class="photo-grid__item" src="./images/photo/item-4.jpg" alt="Белые строительные блоки и знак пешеходного перехода">
-                <img class="photo-grid__item" src="./images/photo/item-3.jpg" alt="Камчатские красоты в тумане">
-                <img class="photo-grid__item" src="./images/photo/item-2.jpg" alt="Пейзаж Камчатки">
-                <img class="photo-grid__item" src="./images/photo/item-1.jpg" alt="Пейзаж Байкала">
-                <img class="photo-grid__item" src="./images/photo/item.jpg" alt="Редеющий туман в горной местности">
-            </div>
+            <img class="photo-grid__item" src="./images/photo/item-11.jpg" alt="Великолепный вид из окна поезда">
+            <img class="photo-grid__item" src="./images/photo/item-10.jpg" alt="Заснеженные горы в белых облаках">
+            <img class="photo-grid__item" src="./images/photo/item-9.jpg" alt="Стоящая на стоге сена собака пристально всматривается в даль">
+            <img class="photo-grid__item" src="./images/photo/item-8.jpg" alt="Ельник в тумане на склоне горы">
+            <img class="photo-grid__item" src="./images/photo/item-7.jpg" alt="Колесо машины на толстом слое льда замёрзшего Байкала">
+            <img class="photo-grid__item" src="./images/photo/item-6.jpg" alt="Пустынный берег моря и горная цепь виднеется вдалеке">
+            <img class="photo-grid__item" src="./images/photo/item-5.jpg" alt="Острые пики снежных гор">
+            <img class="photo-grid__item" src="./images/photo/item-4.jpg" alt="Белые строительные блоки и знак пешеходного перехода">
+            <img class="photo-grid__item" src="./images/photo/item-3.jpg" alt="Камчатские красоты в тумане">
+            <img class="photo-grid__item" src="./images/photo/item-2.jpg" alt="Пейзаж Камчатки">
+            <img class="photo-grid__item" src="./images/photo/item-1.jpg" alt="Пейзаж Байкала">
+            <img class="photo-grid__item" src="./images/photo/item.jpg" alt="Редеющий туман в горной местности">
         </section>
 
         <section class="places">
@@ -87,7 +85,7 @@
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="#" target="_self">park-kosa.ru</a>
+                    <a class="place__link" href="http://park-kosa.ru" target="_self">park-kosa.ru</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-4.jpg" alt="">
                 <div class="place__paragraphs">
@@ -99,7 +97,7 @@
                 <h2 class="place__title">Кольский</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="#" target="_blank">National Geographic</a>
+                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_blank">National Geographic</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-3.jpg" alt="">
                 <div class="place__paragraphs">
@@ -111,7 +109,7 @@
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="https://yourshot.nationalgeographic.com/photos/?keywords=kolskiy" target="_self">National Geographic</a>
+                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_self">National Geographic</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-2.jpg" alt="">
                 <div class="place__paragraphs">
@@ -145,7 +143,7 @@
         </section>
 
         <section class="cover">
-            <a href="#" target="_self">
+            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_self">
                 <!-- <img class="cover__overlay" src="./images/background.jpg" alt="Вагоны и рельсы"> -->
                 <h2 class="cover__title">До Байкала «на собаках»</h2>
                 <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
@@ -157,19 +155,19 @@
     <footer class="footer">
         <ul class="footer__links">
             <li>
-                <a class="footer__link" href="#" target="_self">Карты</a>
+                <a class="footer__link" href="https://yandex.ru/maps" target="_self">Карты</a>
             </li>
             <li>
-                <a class="footer__link" href="#" target="_self">Погода</a>
+                <a class="footer__link" href="https://yandex.ru/pogoda" target="_self">Погода</a>
             </li>
             <li>
-                <a class="footer__link" href="#" target="_self">Расписание</a>
+                <a class="footer__link" href="https://rasp.yandex.ru" target="_self">Расписание</a>
             </li>
             <li>
-                <a class="footer__link" href="#" target="_self">Календарь</a>
+                <a class="footer__link" href="https://calendar.yandex.ru" target="_self">Календарь</a>
             </li>
             <li>
-                <a class="footer__link" href="#" target="_self">Путешествия</a>
+                <a class="footer__link" href="https://travel.yandex.ru" target="_self">Путешествия</a>
             </li>
         </ul>
         <p class="footer__copyright">&copy; 2021. Татьяна С.</p>
