--- a/index.html
+++ b/index.html
@@ -38,9 +38,11 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.jpg" alt="СОН - это аббревиатура, обозначающая Самое Офигенное Наслаждение">
-            <!-- <img class="lead__image lead__image_paths" src="./images/Group4.svg" alt="Путь">-->
-            <p class="lead__caption">Ваша полка — верхняя</p>
+            <div class="lead__image">
+                <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.jpg" alt="СОН - это аббревиатура, обозначающая Самое Офигенное Наслаждение">
+                <!-- <img class="lead__image lead__image_paths" src="./images/Group4.svg" alt="Путь">-->
+                <p class="lead__caption">Ваша полка — верхняя</p>
+            </div>
         </section>
 
         <section class="intro">
@@ -143,29 +145,28 @@
         </section>
 
         <section class="cover">
-            <a href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_self">
-                <!-- <img class="cover__overlay" src="./images/background.jpg" alt="Вагоны и рельсы"> -->
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
-            </a>
+            <a  class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_self"></a>
+            <!-- <img class="cover__overlay" src="./images/background.jpg" alt="Вагоны и рельсы"> -->
+            <h2 class="cover__title">До Байкала <br> «на собаках»</h2>
+            <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </section>
     </main>
 
     <footer class="footer">
         <ul class="footer__links">
-            <li>
+            <li class="footer__link-item">
                 <a class="footer__link" href="https://yandex.ru/maps" target="_self">Карты</a>
             </li>
-            <li>
+            <li class="footer__link-item">
                 <a class="footer__link" href="https://yandex.ru/pogoda" target="_self">Погода</a>
             </li>
-            <li>
+            <li class="footer__link-item">
                 <a class="footer__link" href="https://rasp.yandex.ru" target="_self">Расписание</a>
             </li>
-            <li>
+            <li class="footer__link-item">
                 <a class="footer__link" href="https://calendar.yandex.ru" target="_self">Календарь</a>
             </li>
-            <li>
+            <li class="footer__link-item">
                 <a class="footer__link" href="https://travel.yandex.ru" target="_self">Путешествия</a>
             </li>
         </ul>
