--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
                 <a class="header__lang-link header__lang-link_active" href="#" lang="ru" target="_self">Ru</a>
             </li>
             <li>
-                <a class="header__lang-link" lang="en" target="_self">En</a>
+                <a class="header__lang-link" href="#" lang="en" target="_self">En</a>
             </li>
         </ul>
     </header>
