--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <meta name="author" content="Татьяна С.">
     <title>Russian Travel</title>
     <link rel="stylesheet" href="./vendor/normalize.css">
+    <link rel="stylesheet" href="./vendor/fonts.css">
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="root">
@@ -30,7 +31,6 @@
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
             <div class="lead__image">
                 <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.jpg" alt="СОН - это аббревиатура, обозначающая Самое Офигенное Наслаждение">
-                <!-- <img class="lead__image lead__image_paths" src="./images/Group4.svg" alt="Путь">-->
                 <p class="lead__caption">Ваша полка — верхняя</p>
             </div>
         </section>
@@ -136,7 +136,6 @@
 
         <section class="cover">
             <a  class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_self"></a>
-            <!-- <img class="cover__overlay" src="./images/background.jpg" alt="Вагоны и рельсы"> -->
             <h2 class="cover__title">До Байкала <br> «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </section>
