--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="project, html, css, javascript, learn, yandex, praktikum">
     <meta name="description" content="Незабываемые впечатления. Путешествия по России">
     <meta name="author" content="Татьяна С.">
-    <title>Russian Travel</title>
-    <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="./vendor/fonts.css">
+    <title>Путешествия по России</title>
     <link rel="stylesheet" href="./pages/index.css">
+    <link rel="stylesheet" href="./vendor/fonts.css">
+    <link rel="stylesheet" href="./vendor/normalize.css">
 </head>
 <body class="root">
 <div class="page">
@@ -17,10 +17,10 @@
         <img class="header__logo" src="images/logo.svg" alt="Логотип компании">
         <ul class="header__lang-links">
             <li>
-                <a class="header__lang-link header__lang-link_active" href="#" lang="ru" target="_self">Ru</a>
+                <a class="header__lang-link header__lang-link_active" href="#" title="Переключение на русский язык" target="_self">Ru</a>
             </li>
             <li>
-                <a class="header__lang-link" href="#" lang="en" target="_self">En</a>
+                <a class="header__lang-link" href="#" title="Переключение на английский язык" target="_self">En</a>
             </li>
         </ul>
     </header>
@@ -29,10 +29,10 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <div class="lead__image">
+            <figure class="lead__image">
                 <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.jpg" alt="СОН - это аббревиатура, обозначающая Самое Офигенное Наслаждение">
-                <p class="lead__caption">Ваша полка — верхняя</p>
-            </div>
+                <figcaption class="lead__caption">Ваша полка — верхняя</figcaption>
+            </figure>
         </section>
 
         <section class="intro">
@@ -77,7 +77,7 @@
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="http://park-kosa.ru" target="_self">park-kosa.ru</a>
+                    <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-4.jpg" alt="Куршская коса">
                 <div class="place__paragraphs">
@@ -101,7 +101,7 @@
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_self">National Geographic</a>
+                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">National Geographic</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-2.jpg" alt="Алтай">
                 <div class="place__paragraphs">
@@ -113,7 +113,7 @@
                 <h2 class="place__title">Зимний Байкал</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="https://vk.com/baikalmile" target="_self">https://vk.com/baikalmile</a>
+                    <a class="place__link" href="https://vk.com/baikalmile" target="_blank">https://vk.com/baikalmile</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-1.jpg" alt="Байкал">
                 <div class="place__paragraphs">
@@ -125,7 +125,7 @@
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="http://vodlozero.ru" target="_self">http://vodlozero.ru/</a>
+                    <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image.jpg" alt="Сибирь">
                 <div class="place__paragraphs">
@@ -135,30 +135,32 @@
         </section>
 
         <section class="cover">
-            <a  class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_self"></a>
-            <h2 class="cover__title">До Байкала <br> «на собаках»</h2>
+            <a  class="cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank"></a>
+            <h2 class="cover__title">До Байкала «на собаках»</h2>
             <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
         </section>
     </main>
 
     <footer class="footer">
-        <ul class="footer__links">
-            <li class="footer__link-item">
-                <a class="footer__link" href="https://yandex.ru/maps" target="_self">Карты</a>
-            </li>
-            <li class="footer__link-item">
-                <a class="footer__link" href="https://yandex.ru/pogoda" target="_self">Погода</a>
-            </li>
-            <li class="footer__link-item">
-                <a class="footer__link" href="https://rasp.yandex.ru" target="_self">Расписание</a>
-            </li>
-            <li class="footer__link-item">
-                <a class="footer__link" href="https://calendar.yandex.ru" target="_self">Календарь</a>
-            </li>
-            <li class="footer__link-item">
-                <a class="footer__link" href="https://travel.yandex.ru" target="_self">Путешествия</a>
-            </li>
-        </ul>
+        <nav class="footer__navigation">
+            <ul class="footer__links">
+                <li class="footer__link-item">
+                    <a class="footer__link" href="https://yandex.ru/maps" target="_blank">Карты</a>
+                </li>
+                <li class="footer__link-item">
+                    <a class="footer__link" href="https://yandex.ru/pogoda" target="_blank">Погода</a>
+                </li>
+                <li class="footer__link-item">
+                    <a class="footer__link" href="https://rasp.yandex.ru" target="_blank">Расписание</a>
+                </li>
+                <li class="footer__link-item">
+                    <a class="footer__link" href="https://calendar.yandex.ru" target="_blank">Календарь</a>
+                </li>
+                <li class="footer__link-item">
+                    <a class="footer__link" href="https://travel.yandex.ru" target="_blank">Путешествия</a>
+                </li>
+            </ul>
+        </nav>
         <p class="footer__copyright">&copy; 2021. Татьяна С.</p>
     </footer>
 </div>
