--- a/index.html
+++ b/index.html
@@ -7,9 +7,9 @@
     <meta name="description" content="Незабываемые впечатления. Путешествия по России">
     <meta name="author" content="Татьяна С.">
     <title>Путешествия по России</title>
-    <link rel="stylesheet" href="./pages/index.css">
-    <link rel="stylesheet" href="./vendor/fonts.css">
     <link rel="stylesheet" href="./vendor/normalize.css">
+    <link rel="stylesheet" href="./vendor/fonts.css">
+    <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="root">
 <div class="page">
@@ -29,7 +29,7 @@
         <section class="lead">
             <h1 class="lead__title">Путешествия по России</h1>
             <p class="lead__subtitle">Настоящая страна не в выпусках новостей, а здесь.</p>
-            <figure class="lead__image">
+            <figure class="lead__container">
                 <img class="lead__image" src="./images/kalegin-michail-179870-unsplash.jpg" alt="СОН - это аббревиатура, обозначающая Самое Офигенное Наслаждение">
                 <figcaption class="lead__caption">Ваша полка — верхняя</figcaption>
             </figure>
@@ -136,8 +136,8 @@
 
         <section class="cover">
             <a  class= "cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
-                <h2 class="cover__title">До Байкала «на собаках»</h2>
-                <p class="cover__subtitle">По мотивам учебной темы о Транссибе — путешествие от столицы до Байкала на электричках.</p>
+                <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
+                <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
             </a>
         </section>
     </main>
