--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
     <meta name="description" content="Незабываемые впечатления. Путешествия по России">
     <meta name="author" content="Татьяна С.">
     <title>Путешествия по России</title>
-    <link rel="stylesheet" href="./vendor/normalize.css">
-    <link rel="stylesheet" href="./vendor/fonts.css">
     <link rel="stylesheet" href="./pages/index.css">
 </head>
 <body class="root">
@@ -77,7 +75,7 @@
                 <h2 class="place__title">Куршская коса</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="http://park-kosa.ru" target="_blank">park-kosa.ru</a>
+                    <a class="place__link" href="https://park-kosa.ru" target="_blank">park-kosa.ru</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-4.jpg" alt="Куршская коса">
                 <div class="place__paragraphs">
@@ -125,7 +123,7 @@
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="http://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
+                    <a class="place__link" href="https://vodlozero.ru" target="_blank">https://vodlozero.ru/</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image.jpg" alt="Сибирь">
                 <div class="place__paragraphs">
