--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
                 </div>
                 <img class="place__image" src="./images/place-img/image-4.jpg" alt="Куршская коса">
                 <div class="place__paragraphs">
-                    <p class="place__paragraph">Здесь, посреди лесов и песчаных дюн, вы сможете увидеть два водных горизонта — спокойного Куршского залива с одной стороны и подёрнутого рябью волн Балтийского моря с другой. Уникальная природная зона на краю российского анклава.</p>
-                    <p class="place__paragraph">На этом Калининградская область не заканчивается. Для путешественника и исследователя там же по соседству — самая западная точка России, Балтийская коса, — и немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в спокойствие природы и запах стального, прохладного моря.</p>
+                    <p class="place__paragraph">Здесь, посреди лесов и&nbsp;песчаных дюн, вы&nbsp;сможете увидеть два водных горизонта&nbsp;&mdash; спокойного Куршского залива с&nbsp;одной стороны и&nbsp;подёрнутого рябью волн Балтийского моря с&nbsp;другой. Уникальная природная зона на&nbsp;краю российского анклава.</p>
+                    <p class="place__paragraph">На&nbsp;этом Калининградская область не&nbsp;заканчивается.&nbsp;Для путешественника и&nbsp;исследователя там&nbsp;же по&nbsp;соседству&nbsp;&mdash; самая западная точка России, Балтийская коса,&nbsp;&mdash; и&nbsp;немецкое наследие россыпи небольших приморских городов. Атмосфера здешних мест исключает суету, окуная в&nbsp;спокойствие природы и&nbsp;запах стального, прохладного моря.</p>
                 </div>
             </article>
             <article class="place">
@@ -99,7 +99,7 @@
                 <h2 class="place__title">Алтай</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">National Geographic</a>
+                    <a class="place__link" href="https://www.facebook.com/vera.bashmakova/posts/10156011613718822" target="_blank">Facebook</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image-2.jpg" alt="Алтай">
                 <div class="place__paragraphs">
@@ -123,7 +123,7 @@
                 <h2 class="place__title">Карелия</h2>
                 <div class="place__website">
                     <p class="place__url-heading">url</p>
-                    <a class="place__link" href="https://vodlozero.ru" target="_blank">https://vodlozero.ru/</a>
+                    <a class="place__link" href="https://vodlozero.ru" target="_blank">http://vodlozero.ru/</a>
                 </div>
                 <img class="place__image" src="./images/place-img/image.jpg" alt="Сибирь">
                 <div class="place__paragraphs">
@@ -133,9 +133,9 @@
         </section>
 
         <section class="cover">
-            <a  class= "cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
+            <a class= "cover__overlay" href="https://stampsy.com/na-elektrichkakh-do-baikala" target="_blank">
                 <h2 class="cover__title">До&nbsp;Байкала &laquo;на&nbsp;собаках&raquo;</h2>
-                <p class="cover__subtitle">По&nbsp;мотивам учебной темы о&nbsp;Транссибе&nbsp;&mdash; путешествие от&nbsp;столицы до&nbsp;Байкала на&nbsp;электричках.</p>
+                <p class="cover__subtitle">По мотивам учебной темы о Транссибе &mdash; путешествие от столицы до Байкала на электричках.</p>
             </a>
         </section>
     </main>
